--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ body {
 
 #forHire {
   text-align: right;
-  margin-right: 50px;
+  margin-right: 40px;
   font-size: small;
 }
 
@@ -64,4 +64,15 @@ iframe {
   border: 1px solid black;
   width: 100%;
   height: 400px;
+}
+
+@media screen and (max-width: 414px) {
+  body {
+    margin-top: 1px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+  iframe {
+    height: 250px;
+  }
 }
